[chore] 상단 팝업 완성

--- a/client/index.html
+++ b/client/index.html
@@ -9,13 +9,20 @@
   <link rel="stylesheet" href="./css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
-  <title>Document</title>
+  <title>마켓칼리</title>
 </head>
 
 <body>
+  <section class="popup_wrap">
+    <div class="popup container">
+      <a href="#" class="popup_text">지금 가입하고 인기상품 <b>100원</b>에 받아가세요!</a>
+      <button class="popup_close_btn">
+        <img class="popup_close_img" src="./assets/img/close_btn.png" alt="상단 배너를 닫을수 있는 X표시의 버튼" />
+      </button>
+    </div>
+  </section>
 
-
-  <section>
+  <!-- <section>
     <div class="swiper-1 product-swiper">
       <div class="swiper-wrapper">
           
@@ -35,7 +42,7 @@
           
         </div>
     </div>
-  </section>
+  </section> -->
 
 
   
