[chore] 상단 로고,검색,아이콘 배치 완료

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,84 @@
     </div>
   </section>
 
+  <section class="top_btn container">
+    <ul class="top_btn_list">
+      <li class="btn_register">
+        <a href="#">회원가입</a>
+      </li>
+
+      <div class="bar"></div>
+
+      <li class="btn_login">
+        <a href="#">로그인</a>
+      </li>
+
+      <div class="bar mr0"></div>
+
+      <li class="btn_cs">
+        <a href="#">
+          고객센터
+          <img src="./assets/img/arrow_bottom.png" alt=""/>
+        </a>
+        <ul class="cs_list">
+          <li>
+            <a href="#">
+              공지사항
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              자주하는 질문
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              1:1 문의
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              대량주문
+            </a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+
+  <header class="header_wrap container">
+    <section class="logo_wrap">
+      <img src="./assets/img/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
+      <a class="market_part is_active" href="#">마켓컬리</a>
+      <div class="bar"></div>
+      <a class="beauty_part" href="#">뷰티컬리</a>
+    </section>
+
+    <section class="search">
+      <form method="POST">
+        <fieldset>
+          <legend>검색</legend>
+          <div class="searchForm_group">
+            <div class="formInput">
+              <label for="search" class="a11yHidden">검색어</label>
+              <input id="search" class="formInput_input" type="search" required placeholder="검색어를 입력해주세요" name="search"/>
+              <button class="search_btn" type="submit"></button>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+    </section>
+
+    <section class="icon">
+      <button class="icon_location"></button>
+      <button class="icon_heart"></button>
+      <button class="icon_cart"></button>
+    </section>
+  </header>
+
   <!-- <section>
     <div class="swiper-1 product-swiper">
       <div class="swiper-wrapper">
