--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
     <div class="popup container">
       <a href="#" class="popup_text">지금 가입하고 인기상품 <b>100원</b>에 받아가세요!</a>
       <button class="popup_close_btn">
-        <img class="popup_close_img" src="./assets/img/close_btn.png" alt="상단 배너를 닫을수 있는 X표시의 버튼" />
+        <img class="popup_close_img" src="./assets/icons/Icon/close_btn.png" alt="상단 배너를 닫을수 있는 X표시의 버튼" />
       </button>
     </div>
   </section>
@@ -39,7 +39,7 @@
       <li class="btn_cs">
         <a href="#">
           고객센터
-          <img src="./assets/img/arrow_bottom.png" alt=""/>
+          <img src="./assets/icons/Icon/arrow_bottom.png" alt=""/>
         </a>
         <ul class="cs_list">
           <li>
@@ -72,7 +72,7 @@
 
   <header class="header_wrap container">
     <section class="logo_wrap">
-      <img src="./assets/img/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
+      <img src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
       <a class="market_part is_active" href="#">마켓컬리</a>
       <div class="bar"></div>
       <a class="beauty_part" href="#">뷰티컬리</a>
@@ -99,6 +99,188 @@
       <button class="icon_cart"></button>
     </section>
   </header>
+
+  <section class="category_wrap container">
+    <article class="category">
+      <a class="" href="#">
+        <div class="burger_wrap">
+          <span class="burger"></span>
+          <span class="burger"></span>
+          <span class="burger"></span>
+        </div>
+        카테고리
+      </a>
+      <ul>
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/gift.png" alt="" />
+            <span>선물하기</span>
+          </a>
+        </li>
+        
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/vegetable.png" alt="" />
+            <span>채소</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/fruit.png" alt="" />
+            <span>과일 · 견과 · 쌀</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/seaFood.png" alt="" />
+            <span>수산 · 해산 · 건어물</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/meet.png" alt="" />
+            <span>정육 · 계란</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/cook.png" alt="" />
+            <span>국 · 반찬 · 메인요리</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/salad.png" alt="" />
+            <span>샐러드 · 간편식</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/spice.png" alt="" />
+            <span>면 · 양념 · 오일</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/coffee.png" alt="" />
+            <span>생수 · 음료 · 우유 · 커피</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/snack.png" alt="" />
+            <span>간식 · 과자 · 떡</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/bakery.png" alt="" />
+            <span>베이커리 · 치즈 · 델리</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/health.png" alt="" />
+            <span>건강식품</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/wine.png" alt="" />
+            <span>와인</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/traditionalLiquor.png" alt="" />
+            <span>전통주</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/detergent.png" alt="" />
+            <span>생활용품 · 리빙 · 캠핑</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/skincare.png" alt="" />
+            <span>스킨케어 · 메이크업</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/shampoo.png" alt="" />
+            <span>헤어 · 바디 · 구강</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/kitchen.png" alt="" />
+            <span>주방용품</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/wash.png" alt="" />
+            <span>가전제품</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/animal.png" alt="" />
+            <span>반려동물</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/baby.png" alt="" />
+            <span>베이비 · 키즈 · 완구</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/icons/category/travel.png" alt="" />
+            <span>여행 · 티켓</span>
+          </a>
+        </li>
+      </ul>
+    </article>
+
+    <article class="keyworld">
+      <a class="" href="#">신상품</a>
+      <a class="" href="#">베스트</a>
+      <a class="" href="#">알뜰쇼핑</a>
+      <a class="" href="#">특가/헤택</a>
+    </article>
+
+    <article class="delivery">
+      <a class="" href="#">
+        <span>샛별·낮</span>
+        배송안내
+      </a>
+    </article>
+  </section>
 
   <!-- <section>
     <div class="swiper-1 product-swiper">
