[chore]상단 헤더 오류 수정

--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,9 @@
 
   <header class="header_wrap container">
     <section class="logo_wrap">
-      <img src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
+      <a href="#">
+        <img src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
+      </a>
       <a class="market_part is_active" href="#">마켓컬리</a>
       <div class="bar"></div>
       <a class="beauty_part" href="#">뷰티컬리</a>
