[chore] 하단 footer 초안 작성

--- a/client/index.html
+++ b/client/index.html
@@ -284,6 +284,162 @@
     </article>
   </section>
 
+  <footer class="container">
+    <section class="consumer_wrap">
+      <div class="consumer">
+        <h3 class="consumer_title">
+          고객행복센터
+        </h3>
+        
+        <h3 class="consumer_number">
+          1644-1107
+          <span class="consumer_time">월~토요일 오전 7시 ~ 오후 6시</span>
+        </h3>
+  
+        <div class="question_wrap">
+          <div class="question_kakao">
+            <button class="question_btn">카카오톡 문의</button>
+            <span class="question_text">
+              <p class="first">월~토요일 | 오전 7시 ~ 오후 6시</p>
+              <p class="second">일/공휴일 | 오전 7시 ~ 오후 1시</p>
+            </span>
+          </div>
+  
+          <div class="question_oneOnOne">
+            <button class="question_btn">1:1 문의</button>
+            <span class="question_text">
+              <p class="first">365일</p>
+              <p class="second">고객센터 운영시간에 순차적으로 답변드리겠습니다.</p>
+            </span>
+          </div>
+  
+          <div class="question_lot">
+            <button class="question_btn">대량주문 문의</button>
+            <span class="question_text">
+              <p class="first">월~금요일 | 오전 9시 ~ 오후 6시</p>
+              <p class="second">점심시간 | 낮 12시 ~ 오후 1시</p>
+            </span>
+          </div>
+  
+          <div class="question_email">
+            <p class="first">비회원 문의 : <a class="" href="">help@karlycorp.com</a></p>
+            <p class="second">비회원 대량주문 문의 : <a class="" href="">help@karlycorp.com</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="company">
+        <ul>
+          <li><a class="" href="#">칼리소개</a></li>
+          <li><a class="" href="#">칼리소개영상</a></li>
+          <li><a class="" href="#">인재채용</a></li>
+          <li><a class="" href="#">이용약관</a></li>
+          <li><a class="" href="#">개인정보처리방침</a></li>
+          <li><a class="" href="#">이용안내</a></li>
+        </ul>
+
+        <div class="company_introduce">
+          <p class="">
+            법인명 (상호) : 주식회사 컬리
+            <span class="ml4 mr4">|</span>
+            사업자등록번호 : 261-81-23567
+            <span class="ml4 mr4">|</span> 
+            <a class="" href="#">사업자정보 확인</a>
+          </p>
+          <p class="">
+            통신판매업 : 제 2018-서울강남-01646 호
+            <span class="ml4 mr4">|</span> 
+            개인정보보호책임자 : 이원준
+          </p>
+          <p class="">
+            주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)
+            <span class="ml4 mr4">|</span> 
+            대표이사 : 김슬아
+          </p>
+          <p class="">
+            입점문의 : <a class="" href="#"> 입정문의하기</a>
+            <span class="ml4 mr4">|</span> 
+            제휴문의 : <a class="" href="#">business@karlycorp.com</a>
+          </p>
+          <p class="">채용문의 : recruit@karlycorp    .com</p>
+          <p class="">팩스 : 070 - 7500 - 6098</p>
+        </div>
+
+        <div class="company_sns">
+          <button class="sns_btn">
+            <a class="" href="#">
+              <img src="./assets/icons/sns/blog.png" alt=""/>
+            </a>
+          </button>
+
+          <button class="sns_btn">
+            <a class="" href="#">
+              <img src="./assets/icons/sns/faceBook.png" alt=""/>
+            </a>
+          </button>
+
+          <button class="sns_btn">
+            <a class="" href="#">
+              <img src="./assets/icons/sns/instagram.png" alt=""/>
+            </a>
+          </button>
+
+          <button class="sns_btn">
+            <a class="" href="#">
+              <img src="./assets/icons/sns/post.png" alt=""/>
+            </a>
+          </button>
+
+          <button class="sns_btn">
+            <a class="" href="#">
+              <img src="./assets/icons/sns/youtube.png" alt=""/>
+            </a>
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <section class="alliance">
+      <button class="isms_btn">
+        <img src="./assets/icons/footer/isms.png" alt=""/>
+        <p class="">
+          [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br/>
+          (심사받지 않은 물리적 인프라 제외)<br/>
+          [유효기간] 2022.01.19 ~ 2025.01.18<br/>
+        </p>
+      </button>
+
+      <button class="eprivacy_btn">
+        <img src="./assets/icons/footer/eprivacy.png" alt=""/>
+        <p class="">
+          개인정보보호 우수 웹사이트<br/>
+          개인정보처리시스템 인증 (ePRIVACY PLUS)
+        </p>
+        <p class=""></p>
+      </button>
+
+      <button class="payment_btn">
+        <img src="./assets/icons/footer/payment.png" alt=""/>
+        <p class="">
+          토이페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
+        </p>
+      </button>
+
+      <button class="wooribank_btn">
+        <img src="./assets/icons/footer/wooribank.png" alt=""/>
+        <p class="">
+          고객님이 현금으로 결제한 금액에 대해 우리은행과 재무지급보증 계약을 체결하여 안전거래를 보장하고 있습니다.
+        </p>
+      </button>
+    </section>
+  </footer>
+
+  <section class="copyright">
+    <p class="first">마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가 판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.</p>
+    <p class="second">마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서 통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질, 교환/환불 등 의무와 책임을 부담하지 않습니다.</p>
+    <p class="copyright_text">© KURLY CORP. ALL RIGHTS RESERVED</p>
+  </section>
+
   <!-- <section>
     <div class="swiper-1 product-swiper">
       <div class="swiper-wrapper">
