[chore] 하단 푸터 1차 수정

--- a/client/index.html
+++ b/client/index.html
@@ -421,7 +421,8 @@
       <button class="payment_btn">
         <img src="./assets/icons/footer/payment.png" alt=""/>
         <p class="">
-          토이페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
+          토이페이먼츠 구매안전(에스크로) 서비스<br/>
+          를 이용하실 수 있습니다.
         </p>
       </button>
 
