[chore]상단 header 수정 완료 #9

--- a/client/index.html
+++ b/client/index.html
@@ -28,13 +28,13 @@
         <a href="#">회원가입</a>
       </li>
 
-      <div class="bar"></div>
+      <div class="top_bar"></div>
 
       <li class="btn_login">
         <a href="#">로그인</a>
       </li>
 
-      <div class="bar mr0"></div>
+      <div class="top_bar second"></div>
 
       <li class="btn_cs">
         <a href="#">
@@ -76,7 +76,7 @@
         <img src="./assets/icons/Icon/logo.png" alt="홈페이지 마켓칼리를 설명하는 보라색 로고 이미지" />
       </a>
       <a class="market_part is_active" href="#">마켓컬리</a>
-      <div class="bar"></div>
+      <div class="logo_bar"></div>
       <a class="beauty_part" href="#">뷰티컬리</a>
     </section>
 
@@ -104,7 +104,7 @@
 
   <section class="category_wrap container">
     <article class="category">
-      <a class="" href="#">
+      <a href="#">
         <div class="burger_wrap">
           <span class="burger"></span>
           <span class="burger"></span>
@@ -270,14 +270,14 @@
     </article>
 
     <article class="keyworld">
-      <a class="" href="#">신상품</a>
-      <a class="" href="#">베스트</a>
-      <a class="" href="#">알뜰쇼핑</a>
-      <a class="" href="#">특가/헤택</a>
+      <a href="#">신상품</a>
+      <a href="#">베스트</a>
+      <a href="#">알뜰쇼핑</a>
+      <a href="#">특가/헤택</a>
     </article>
 
     <article class="delivery">
-      <a class="" href="#">
+      <a href="#">
         <span>샛별·낮</span>
         배송안내
       </a>
@@ -330,12 +330,12 @@
 
       <div class="company">
         <ul>
-          <li><a class="" href="#">칼리소개</a></li>
-          <li><a class="" href="#">칼리소개영상</a></li>
-          <li><a class="" href="#">인재채용</a></li>
-          <li><a class="" href="#">이용약관</a></li>
-          <li><a class="" href="#">개인정보처리방침</a></li>
-          <li><a class="" href="#">이용안내</a></li>
+          <li><a href="#">칼리소개</a></li>
+          <li><a href="#">칼리소개영상</a></li>
+          <li><a href="#">인재채용</a></li>
+          <li><a href="#"href="#">이용약관</a></li>
+          <li><a href="#">개인정보처리방침</a></li>
+          <li><a href="#">이용안내</a></li>
         </ul>
 
         <div class="company_introduce">
@@ -415,7 +415,6 @@
           개인정보보호 우수 웹사이트<br/>
           개인정보처리시스템 인증 (ePRIVACY PLUS)
         </p>
-        <p class=""></p>
       </button>
 
       <button class="payment_btn">
