[chore] 하단 footer 수정 완료 #13

--- a/client/index.html
+++ b/client/index.html
@@ -322,87 +322,77 @@
           </div>
   
           <div class="question_email">
-            <p class="first">비회원 문의 : <a class="" href="">help@karlycorp.com</a></p>
-            <p class="second">비회원 대량주문 문의 : <a class="" href="">help@karlycorp.com</a></p>
+            <p class="first">비회원 문의 : <a href="">help@karlycorp.com</a></p>
+            <p class="second">비회원 대량주문 문의 : <a href="">help@karlycorp.com</a></p>
           </div>
         </div>
       </div>
 
       <div class="company">
-        <ul>
-          <li><a href="#">칼리소개</a></li>
-          <li><a href="#">칼리소개영상</a></li>
-          <li><a href="#">인재채용</a></li>
-          <li><a href="#"href="#">이용약관</a></li>
-          <li><a href="#">개인정보처리방침</a></li>
-          <li><a href="#">이용안내</a></li>
+        <ul class="company_menu_wrap">
+          <li class="company_menu"><a href="#">칼리소개</a></li>
+          <li class="company_menu"><a href="#">칼리소개영상</a></li>
+          <li class="company_menu"><a href="#">인재채용</a></li>
+          <li class="company_menu"><a href="#">이용약관</a></li>
+          <li class="company_menu"><a href="#">개인정보처리방침</a></li>
+          <li class="company_menu"><a href="#">이용안내</a></li>
         </ul>
 
         <div class="company_introduce">
-          <p class="">
-            법인명 (상호) : 주식회사 컬리
-            <span class="ml4 mr4">|</span>
-            사업자등록번호 : 261-81-23567
-            <span class="ml4 mr4">|</span> 
-            <a class="" href="#">사업자정보 확인</a>
+          <p>
+            법인명 (상호) : 주식회사 컬리<span class="footer_bar">|</span>사업자등록번호 : 261-81-23567<span class="footer_bar">|</span><a href="#">사업자정보 확인</a>
           </p>
-          <p class="">
-            통신판매업 : 제 2018-서울강남-01646 호
-            <span class="ml4 mr4">|</span> 
-            개인정보보호책임자 : 이원준
+          <p>
+            통신판매업 : 제 2018-서울강남-01646 호<span class="footer_bar">|</span>개인정보보호책임자 : 이원준
           </p>
-          <p class="">
-            주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)
-            <span class="ml4 mr4">|</span> 
-            대표이사 : 김슬아
+          <p>
+            주소 : 서울특별시 강남구 테헤란로 133, 18층(역삼동)<span class="footer_bar">|</span>대표이사 : 김슬아
           </p>
-          <p class="">
-            입점문의 : <a class="" href="#"> 입정문의하기</a>
-            <span class="ml4 mr4">|</span> 
-            제휴문의 : <a class="" href="#">business@karlycorp.com</a>
+          <p>
+            입점문의 : <a href="#">입정문의하기</a><span class="footer_bar">|</span>제휴문의 : <a href="#">business@karlycorp.com</a>
           </p>
-          <p class="">채용문의 : recruit@karlycorp    .com</p>
-          <p class="">팩스 : 070 - 7500 - 6098</p>
+          <p>채용문의 : recruit@karlycorp    .com</p>
+          <p>팩스 : 070 - 7500 - 6098</p>
         </div>
 
-        <div class="company_sns">
-          <button class="sns_btn">
-            <a class="" href="#">
+        <ul class="company_sns_wrap">
+          <li class="company_sns">
+            <a href="#">
               <img src="./assets/icons/sns/blog.png" alt=""/>
             </a>
-          </button>
+          </li>
 
-          <button class="sns_btn">
-            <a class="" href="#">
+          <li class="company_sns">
+            <a href="#">
               <img src="./assets/icons/sns/faceBook.png" alt=""/>
             </a>
-          </button>
+          </li>
 
-          <button class="sns_btn">
-            <a class="" href="#">
+          <li class="company_sns">
+            <a href="#">
               <img src="./assets/icons/sns/instagram.png" alt=""/>
             </a>
-          </button>
+          </li>
 
-          <button class="sns_btn">
-            <a class="" href="#">
+          <li class="company_sns">
+            <a href="#">
               <img src="./assets/icons/sns/post.png" alt=""/>
             </a>
-          </button>
+          </li>
 
-          <button class="sns_btn">
-            <a class="" href="#">
+          <li class="company_sns">
+            <a href="#">
               <img src="./assets/icons/sns/youtube.png" alt=""/>
             </a>
-          </button>
-        </div>
+          </li>
+        </ul>
       </div>
     </section>
 
     <section class="alliance">
       <button class="isms_btn">
         <img src="./assets/icons/footer/isms.png" alt=""/>
-        <p class="">
+        <p>
           [인증범위] 마켓칼리 쇼핑몰 서비스 개발 운영<br/>
           (심사받지 않은 물리적 인프라 제외)<br/>
           [유효기간] 2022.01.19 ~ 2025.01.18<br/>
@@ -411,7 +401,7 @@
 
       <button class="eprivacy_btn">
         <img src="./assets/icons/footer/eprivacy.png" alt=""/>
-        <p class="">
+        <p>
           개인정보보호 우수 웹사이트<br/>
           개인정보처리시스템 인증 (ePRIVACY PLUS)
         </p>
@@ -419,14 +409,14 @@
 
       <button class="payment_btn">
         <img src="./assets/icons/footer/payment.png" alt=""/>
-        <p class="">
+        <p>
           토이페이먼츠 구매안전(에스크로) 서비스를 이용하실 수 있습니다.
         </p>
       </button>
 
       <button class="wooribank_btn">
         <img src="./assets/icons/footer/wooribank.png" alt=""/>
-        <p class="">
+        <p>
           고객님이 현금으로 결제한 금액에 대해 우리은행과 재무지급보증 계약을 체결하여 안전거래를 보장하고 있습니다.
         </p>
       </button>
@@ -438,6 +428,14 @@
     <p class="second">마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서 통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질, 교환/환불 등 의무와 책임을 부담하지 않습니다.</p>
     <p class="copyright_text">© KURLY CORP. ALL RIGHTS RESERVED</p>
   </section>
+
+  <ul>
+    <li>
+      <a href="">
+        <img src="" alt="" />
+      </a>
+    </li>
+  </ul>
 
   <!-- <section>
     <div class="swiper-1 product-swiper">
