[chore] 상단 탭메뉴 마크업 #17

--- a/client/productList.html
+++ b/client/productList.html
@@ -719,7 +719,7 @@
 
           <li class="new"><a href="#">신상품순</a></li>
           <li class="sales_rate"><a href="#">판매량순</a></li>
-          <li class="benefits"><a href="#">혜택순</a></li>
+          <li class="benefit"><a href="#">혜택순</a></li>
           <li class="low_price"><a href="#">낮은 가격순</a></li>
           <li class="high_price"><a href="#">높은 가격순</a></li>
         </ul>
