--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/juhee.css" />
   <link rel="stylesheet" href="./css/common.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
@@ -284,6 +284,22 @@
       </a>
     </article>
   </section>
+
+  <main>
+    <!-- main banner -->
+    <div class="main-banner-swiper">
+      <div class="main-banner-swiper-wrapper">
+        <div class="main-banner-swiper-slide"><a href="/"><img src="./assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
+        <div class="main-banner-swiper-slide"><a href="/"><img src="./assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
+        <div class="main-banner-swiper-slide"><a href="/"><img src="./assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
+      </div>
+      <div class="main-banner-swiper-button-prev"></div>
+      <div class="main-banner-swiper-button-next"></div>
+    </div>
+
+  </main>
+
+
 
   <footer class="container">
     <section class="consumer_wrap">
