[chore] product list 마크업 #3

--- a/client/productList.html
+++ b/client/productList.html
@@ -724,6 +724,162 @@
           <li class="high_price"><a href="#">높은 가격순</a></li>
         </ul>
       </div>
+
+      <div class="product_container">
+        <div class="product_box">
+          <a href="#">
+            <div class="img-box">
+              <img
+                src="./assets/thumbnail/product01.png"
+                alt="[풀무원]탱탱쫄면(4개입)"
+              />
+              <button class="cart_icon">
+                <img src="./assets/icons/list/cart.svg" alt="장바구니에 담기" />
+              </button>
+            </div>
+
+            <div class="text_box">
+              <p class="product_delivery">샛별배송</p>
+              <p class="product_name">[풀무원] 탱탱쫄면 (4개입)</p>
+              <p class="product_price">4,980원</p>
+              <p class="product_description">튀기지 않아 부담없는 매콤함</p>
+
+              <div class="badges">
+                <p class="karly_badge">Karly Only</p>
+                <p class="limit_badge">한정수량</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="product_box">
+          <a href="#">
+            <div class="img-box">
+              <img
+                src="./assets/thumbnail/product02.png"
+                alt="[온더바디] 죠르디 시카 자석 선쿠션"
+              />
+              <button class="cart_icon">
+                <img src="./assets/icons/list/cart.svg" alt="장바구니에 담기" />
+              </button>
+            </div>
+
+            <div class="text_box">
+              <p class="product_delivery">샛별배송</p>
+              <p class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</p>
+              <p class="product_price">32,500원</p>
+              <p class="product_description">
+                끈적임 없이 보송한 무기자차 선쿠션
+              </p>
+            </div>
+          </a>
+        </div>
+
+        <div class="product_box">
+          <a href="#">
+            <div class="img-box">
+              <img
+                src="./assets/thumbnail/product03.png"
+                alt="[프로쉬]베이비 세탁세"
+              />
+              <button class="cart_icon">
+                <img src="./assets/icons/list/cart.svg" alt="장바구니에 담기" />
+              </button>
+            </div>
+
+            <div class="text_box">
+              <p class="product_delivery">샛별배송</p>
+              <p class="product_name">[프로쉬] 베이비 세탁세</p>
+              <p class="product_price">
+                <span class="discount">24%</span>18,900원
+              </p>
+              <p class="product_description">튀기지 않아 부담없는 매콤함</p>
+
+              <div class="badges">
+                <p class="karly_badge">Karly Only</p>
+                <p class="limit_badge">한정수량</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="product_box">
+          <a href="#">
+            <div class="img-box">
+              <img
+                src="./assets/thumbnail/product01.png"
+                alt="[풀무원]탱탱쫄면(4개입)"
+              />
+              <button class="cart_icon">
+                <img src="./assets/icons/list/cart.svg" alt="장바구니에 담기" />
+              </button>
+            </div>
+
+            <div class="text_box">
+              <p class="product_delivery">샛별배송</p>
+              <p class="product_name">[풀무원] 탱탱쫄면 (4개입)</p>
+              <p class="product_price">4,980원</p>
+              <p class="product_description">튀기지 않아 부담없는 매콤함</p>
+
+              <div class="badges">
+                <p class="karly_badge">Karly Only</p>
+                <p class="limit_badge">한정수량</p>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="product_box">
+          <a href="#">
+            <div class="img-box">
+              <img
+                src="./assets/thumbnail/product02.png"
+                alt="[온더바디] 죠르디 시카 자석 선쿠션"
+              />
+              <button class="cart_icon">
+                <img src="./assets/icons/list/cart.svg" alt="장바구니에 담기" />
+              </button>
+            </div>
+
+            <div class="text_box">
+              <p class="product_delivery">샛별배송</p>
+              <p class="product_name">[온더바디] 죠르디 시카 자석 선쿠션</p>
+              <p class="product_price">32,500원</p>
+              <p class="product_description">
+                끈적임 없이 보송한 무기자차 선쿠션
+              </p>
+            </div>
+          </a>
+        </div>
+
+        <div class="product_box">
+          <a href="#">
+            <div class="img-box">
+              <img
+                src="./assets/thumbnail/product03.png"
+                alt="[프로쉬]베이비 세탁세"
+              />
+              <button class="cart_icon">
+                <img src="./assets/icons/list/cart.svg" alt="장바구니에 담기" />
+              </button>
+            </div>
+
+            <div class="text_box">
+              <p class="product_delivery">샛별배송</p>
+              <p class="product_name">[프로쉬] 베이비 세탁세</p>
+              <p class="product_price">
+                <span class="discount">24%</span>18,900원
+              </p>
+              <p class="product_description">튀기지 않아 부담없는 매콤함</p>
+
+              <div class="badges">
+                <p class="karly_badge">Karly Only</p>
+                <p class="limit_badge">한정수량</p>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
     </section>
 
     <footer class="container">
