[chore] product list 마크업 #17

--- a/client/productList.html
+++ b/client/productList.html
@@ -728,7 +728,7 @@
       <div class="product_container">
         <div class="product_box">
           <a href="#">
-            <div class="img-box">
+            <div class="img_box">
               <img
                 src="./assets/thumbnail/product01.png"
                 alt="[풀무원]탱탱쫄면(4개입)"
@@ -754,7 +754,7 @@
 
         <div class="product_box">
           <a href="#">
-            <div class="img-box">
+            <div class="img_box">
               <img
                 src="./assets/thumbnail/product02.png"
                 alt="[온더바디] 죠르디 시카 자석 선쿠션"
@@ -777,7 +777,7 @@
 
         <div class="product_box">
           <a href="#">
-            <div class="img-box">
+            <div class="img_box">
               <img
                 src="./assets/thumbnail/product03.png"
                 alt="[프로쉬]베이비 세탁세"
@@ -805,7 +805,7 @@
 
         <div class="product_box">
           <a href="#">
-            <div class="img-box">
+            <div class="img_box">
               <img
                 src="./assets/thumbnail/product01.png"
                 alt="[풀무원]탱탱쫄면(4개입)"
@@ -831,7 +831,7 @@
 
         <div class="product_box">
           <a href="#">
-            <div class="img-box">
+            <div class="img_box">
               <img
                 src="./assets/thumbnail/product02.png"
                 alt="[온더바디] 죠르디 시카 자석 선쿠션"
@@ -854,7 +854,7 @@
 
         <div class="product_box">
           <a href="#">
-            <div class="img-box">
+            <div class="img_box">
               <img
                 src="./assets/thumbnail/product03.png"
                 alt="[프로쉬]베이비 세탁세"
