--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="./css/juhee.css" />
   <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/juhee.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
   <title>마켓칼리</title>
@@ -287,15 +287,18 @@
 
   <main>
     <!-- main banner -->
-    <div class="main-banner-swiper">
-      <div class="main-banner-swiper-wrapper">
-        <div class="main-banner-swiper-slide"><a href="/"><img src="./assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
-        <div class="main-banner-swiper-slide"><a href="/"><img src="./assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
-        <div class="main-banner-swiper-slide"><a href="/"><img src="./assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
+    <section>
+      <div class="swiper-main-banner">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner05.png" alt="이 주의 특가 한 눈에 보기 배너" /></a></div>
+          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner01.png" alt="칼리 과일 가게 배너" /></a></div>
+          <div class="swiper-slide"><a href="/"><img src="./assets/banner/banner02.png" alt="이 달의 카드 혜택 배너" /></a></div>
+        </div>
+        <div class="swiper-button-prev main-banner-prev"></div>
+        <div class="swiper-button-next main-banner-next"></div>
       </div>
-      <div class="main-banner-swiper-button-prev"></div>
-      <div class="main-banner-swiper-button-next"></div>
-    </div>
+
+    </section>
 
   </main>
 
