[chore] 합치는것 오류로 branch재생성

--- a/client/page_productDetail.html
+++ b/client/page_productDetail.html
@@ -8,6 +8,7 @@
   href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/page_productDetail.css"> 
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./js/main.js" type="module"></script>
   <title>마켓칼리</title>
@@ -285,7 +286,104 @@
     </article>
   </section>
 
+  <main class="productDetail_main">
+    <img class="product_image" src="assets/tangtang/detail_view.jpg">
+    <section class="product_information">
+      <article class="main_information">
+        <div class="type_of_delivery">샛별배송</div>
+        <div class="selected_product"> 
+          <h2 class="product_name">[풀무원] 탱탱쫄면 (4개입)</h2>
+          <div class="product_short_description">튀기지 않아 부담 없는 매콤함</div>
+        </div>
+        <article class="price">
+          <div class="number">4,980</div>
+          <div class="unit">원</div>
+        </article>
+        <div class="point_benefits_information">로그인 후, 적립 혜택이 제공됩니다.</div>
+      </article>
+      <article class="sub_information">
+        <dl>
+          <dt>배송</dt>
+          <dd>
+            <p>샛별배송</p>
+            <p class="condition_of_morning_delivery">23시 전 주문 시 내일 아침 7시 전 도착 <br>(대구•부산•울산 샛별배송 운영시간 별도 확인)</p>
+          </dd>
+        </dl>
+        <dl>
+          <dt>판매자</dt>
+          <dd>컬리</dd>
+        </dl>
+        <dl>
+          <dt>포장타입</dt>
+          <dd>
+            <p>상온 (종이포장)</p>
+            <p style="color:#898989; margin-top:4px;">택배배송은 에코 포장이 스티로폼으로 대체됩니다.</p>
+          </dd>
+        </dl>
+        <dl>
+          <dt>판매단위</dt>
+          <dd>1봉</dd>
+        </dl>
+        <dl>
+          <dt>중량/용량</dt>
+          <dd>123g*4봉</dd>
+        </dl>
+        <dl>
+          <dt>원산지</dt>
+          <dd>상품설명/상세정보 참조</dd>
+        </dl>
+        <dl>
+          <dt>알레르기정보</dt>
+          <dd class="material_information">
+            <p>-대두, 밀, 쇠고기 함유</p>
+            <p>
+              -계란, 우유, 메밀, 땅콩, 고등어, 게, 돼지고기, 새우, 복숭아, 토마토, 아황산류, 호두, 잣, 닭고기, 오징어, 조개류(굴, 전복, 홍합 포함)를 
+              사용한 제품과 같은 제조시설에서 제조
+            </p>
+          </dd>
+        </dl>
+      </article>
+      <article class="buy">
+        <dl class="dl_product_choose">
+          <dt style="width:128px; height:26px; font-weight: 600; line-height: 150%; color: #6B6B6B;">상품선택</dt>
+          <dd>
+            <div style="border: 1px solid #E1E1E1; padding: 12px 16px; position: relative;">
+              <div class="calc_price">
+                <div style="color:#6B6B6B; font-size: 12px; font-weight: 600; line-height: 150%; height:18px;">[풀무원]탱탱쫄면(4개입)</div>
+                <div style="align-items:center; display:flow-root;">
+                  <div style="display:flex; align-items: center; border: 1px solid #C4C4C4; width:84px; box-sizing: border-box; padding:0; margin-top: 12px;">
+                    <button class="minus_amount">
+                      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20 14V16H10V14H20Z" fill="#333333"/>
+                        </svg>
+                    </button>
+                    <span class="number_of_product">1</span>
+                    <button class="plus_amount">
+                      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16 10V14H20V16H16V20H14V16H10V14H14V10H16Z" fill="#333333"/>
+                        </svg>
+                    </button>
+                  </div>
+                  <div>
+                    <span class="total_price">4,980원</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </dd>
+        </dl>
+        <div>
+          <button class="like"></button>
+          <button class="alarm"></button>
+          <button class="push_cart"></button>
+        </div>
+      </article>
+    </section> <!-- /product_information -->
+  </main>
   
+  
+</body>
+</html>
 
   <footer class="container">
     <section class="consumer_wrap">
