[chore] pagination 작업 #17

--- a/client/productList.html
+++ b/client/productList.html
@@ -880,6 +880,36 @@
           </a>
         </div>
       </div>
+
+      <div class="pagination">
+        <a href="#" class="first_page_move_btn">
+          <img
+            src="./assets/icons/list/double_left_arrow.svg"
+            alt="처음 페이지로 이동하기 아이콘"
+          />
+        </a>
+        <a href="#" class="prev_page_btn">
+          <img
+            src="./assets/icons/list/left_arrow.svg"
+            alt="이전 페이지로 이동하기 아이콘"
+          />
+        </a>
+        <a href="#" class="first_page_btn">1</a>
+        <a href="#" class="second_page_btn">2</a>
+        <a href="#" class="third_page_btn">3</a>
+        <a href="#" class="next_page_btn">
+          <img
+            src="./assets/icons/list/right_arrow.svg"
+            alt="다음 페이지로 이동하기 아이콘"
+          />
+        </a>
+        <a href="#" class="last_move_page_btn">
+          <img
+            src="./assets/icons/list/double_right_arrow.svg"
+            alt="마지막 페이지로 이동하기 아이콘"
+          />
+        </a>
+      </div>
     </section>
 
     <footer class="container">
